# Curso-Completo-de-Rust-Sistemas-Embarcados

./: Cargo.toml  README.md  TUTORIAIS.md
modulo-01-fundamentos-embarcados/: README.md
modulo-01-fundamentos-embarcados/exemplos/: benchmark_comparativo.rs
modulo-02-rust-embarcado/: README.md
modulo-03-arduino-rust/: README.md
modulo-03-arduino-rust/exemplos/: monitor_ambiental.rs
modulo-04-esp32-iot/: README.md
modulo-05-raspberry-pi/: README.md
modulo-06-sistemas-automotivos/: README.md
modulo-07-sistemas-industriais/: README.md
modulo-08-desenvolvimento-testes/: README.md
modulo-09-analise-performance/: README.md
modulo-10-projeto-pesquisa/: README.md
